[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "A web crawler MCP server using crawl4ai"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kavin Kumar M", email = "your.email@example.com"},
]
keywords = ["mcp", "crawler", "web", "crawl4ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.7.1",
    "crawl4ai>=0.6.2",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/crawl4ai-mcp"
"Bug Tracker" = "https://github.com/yourusername/crawl4ai-mcp/issues"

[project.scripts]
crawl4ai-mcp = "Crawl_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["Crawl_mcp"]
